@@ -1,3 +1,6 @@
+Version 2010081801
++ Added British authors
+
 Version 2009110201
 + List requirements in Makefile.PL
 
